[package]
name = "new_bridge"
version = "0.1.0"
authors = ["Taki"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
winapi = {version = "0.3.9", features =["commctrl","guiddef","oleauto","combaseapi","oaidl","guiddef","winuser", "minwindef","windef", "ntdef", "libloaderapi", "unknwnbase", "wtypesbase", "objidlbase","wtypes", "objbase" ]}
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
invoke_wrap = {path = "C:/Users/Taki/source/repos/invoke_wrap"}
wio = {git = "https://github.com/retep998/wio-rs.git"}



[build-dependencies]
embed-resource = "1.3.3"
